@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-14T16:08:02Z",
-  "count" : 14,
-  "count_minmax" : [ 14, 14 ],
-  "count_decinc" : [ -0, +14 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2023-08-15T00:31:28Z",
+  "count" : 16,
+  "count_minmax" : [ 14, 16 ],
+  "count_decinc" : [ -0, +16 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
