@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-14T16:08:02Z",
+  "timestamp" : "2023-08-15T00:31:28Z",
   "count_outdated" : 1387,
   "uniques_outdated" : 335,
-  "count" : 1484,
-  "uniques" : 347,
+  "count" : 1486,
+  "uniques" : 348,
   "views" : [
     {
       "timestamp": "2023-08-01T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2023-08-14T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 14, 14 ],
-      "count_decinc": [ 0, 14 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 16,
+      "count_minmax": [ 14, 16 ],
+      "count_decinc": [ 0, 16 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
