@@ -1,6 +1,6 @@
 {
-  "count": 97,
-  "uniques": 12,
+  "count": 99,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2023-08-01T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2023-08-14T00:00:00Z",
-      "count": 14,
-      "uniques": 1
+      "count": 16,
+      "uniques": 2
     }
   ]
 }
